--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Araarong</title>
+    <title> Arrarong </title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,7 +12,7 @@
         <div class="container-navbar">
             <ul class="ul-navbar">
                 <li class="li-navbar">
-                    <a href="#" class="anjay">I</a>
+                    <a href="##/I.html" class="anjay">I</a>
                 <li class="li-navbar">
                     <a href="LOVE.html" class="anjay"> LOVE </a>
                 <li class="li-navbar">
@@ -26,14 +26,15 @@
             <a href="https://www.instagram.com/araascmhrnii/?utm_source=ig_web_button_share_sheet" 
             class="a-content">
                 <img src="Ararong.jpeg" class="img-content" />
-            </a>
+                <P> IG NYA SICANTIK 😘. Klik foto </P>
+              </a>
 
         </div>
         <!-- CONTENT 1 END -->
 
         <!-- FOOTER -->
         <div class="container-footer">
-            <h1 clqss="h1-footer"> CEWEK CANTIK 😍 </h1>
+            <h1 class="h1-footer"> CEWEK CANTIK 😍 </h1>
         </div>
         <!-- FOOTER END -->
     </div>
